fix query syntax link not showing on focus

--- a/ui_framework/components/local_nav/_local_search.scss
+++ b/ui_framework/components/local_nav/_local_search.scss
@@ -40,6 +40,7 @@
     position: absolute;
     right: $globalFormControlHorizontalPadding;
     top: 50%; /* 1 */
+    z-index: 2;
     transform: translateY(-50%); /* 1 */
   }
 
